--- a/client/.env-sample
+++ b/client/.env-sample
@@ -1,1 +1,4 @@
-VITE_FIREBASE_API_KEY = "YOUR_FIREBASE_API_KEY"
+VITE_API_BASE_URL=http://localhost:8000
+VITE_APP_GOOGLE_MAPS_KEY=YOUR_GOOGLE_MAPS_API_KEY
+VITE_GEMINI_API_KEY=YOUR_GEMINI_API_KEY
+VITE_OPENCAGE_API_KEY=YOUR_OPENCAGE_API_KEY
